--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
   <!-- font link -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inknut+Antiqua&family=Inter&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <section class=" flex justify-between ">
-    <aside class=" bg-[#0E1B34] w-[20%] font-inter h-screen">
+  <section class=" flex justify-between h-screen  ">
+    <aside class=" bg-[#0E1B34] w-[20%] font-inter  ">
       <div>
-        <div class="text-center mt-5 mb-10 text-lg ">
-          <h1 class="text-[#D9D9D9]">BILLIONAIRE</h1>
-          <h3 class="text-[#D9D9D9] opacity-75">DIARY</h3>
+        <div class="text-center mt-5 mb-10 text-lg">
+          <h1 " class=" text-[#D9D9D9] ">BILLIONAIRE</h1>
+          <h3 class=" text-[#D9D9D9] opacity-75">DIARY</h3>
         </div>
         <div class="space-y-3 w-10/12 mx-auto">
           <div class="text-center  ">
-            <button class="bg-[#D9D9D9] w-full   text-sm text-[#0E1B34] btn-effect "><span class="font-bold ">Add a
+            <button class="bg-[#D9D9D9] w-full  text-sm text-[#0E1B34] btn-effect "><span class="font-bold ">Add a
                 user</span>
               <small class="block font-light ">(Randomly)</small></button>
           </div>
@@ -58,8 +58,9 @@
             </button>
           </div>
           <div class="text-center">
-            <button class="bg-[#D9D9D9] w-full text-sm text-[#0E1B34] btn-effect "><span class="font-bold">Richest by
-                industry</span> <br>
+            <button id="industry" class="bg-[#D9D9D9] w-full text-sm text-[#0E1B34] btn-effect "><span
+                class="font-bold">Richest by
+                Industry</span> <br>
               <small class=" font-light ">(Technology)</small></button>
           </div>
           <div class="text-center">
@@ -69,22 +70,29 @@
           </div>
         </div>
 
-
       </div>
     </aside>
-    <main class=" h-screen w-[80%] ">
-      <header class="bg-[#FCFAFA] flex justify-between items-center h-[15%] ">
-        <div class="mt-5 ms-11">
-          <input type="text" placeholder="Search"
-            class="bg-[#FCFAFA] border-b-2 border-[#0E1B34] w-28 max-w-xs focus:outline-none" />
+    <main class=" w-[80%] overflow-y-scroll">
+
+      <!-- header section -->
+      <header class="bg-[#FCFAFA] flex justify-between items-center h-[15%]  ">
+        <div class=" ms-11">
+          <input id="searchField" type="text" placeholder="Search"
+            class="bg-[#FCFAFA] font-inter border-b-2 border-[#0E1B34] w-28 max-w-xs focus:outline-none" />
+        </div>
+        <div id="headingTag" class="text-center font-inknut mr-24 hidden">
+          <h2> <span class="text-xl font-bold ">Richest by industry</span> <br> <span
+              class="text-sm font-semibold">(Technology)</span></h2>
+
         </div>
         <div>
           <img class="w-14" src="images/logo/logo1.png" alt="">
         </div>
       </header>
 
-      <section class="bg-[#D9D9D9] h-[85%] pt-10 ">
-        <div class=" w-11/12 mx-auto">
+      <!-- Table Section -->
+      <section id="tableSection" class="bg-[#D9D9D9] h-[85%] pt-10  ">
+        <div class=" w-11/12 mx-auto h-full">
           <h3 class="text-[#000000] font-semibold font-inter py-7 ">Hello, User!</h3>
 
           <div class="overflow-x-auto">
@@ -135,8 +143,33 @@
           </tfoot>
           </table>
         </div>
+
+
+      </section>
+
+      <!-- card section -->
+      <section class="bg-[#D9D9D9] pt-10 h-[85%] ">
+
+        <div class=" w-full p-4 ">
+          <!-- Loding button 1st -->
+          <div id="loading" class="text-center hidden mb-5 ">
+            <button class="btn loading text-center bg-[#0E1B34] text-[#D9D9D9] rounded-none">loading...</button>
+          </div>
+          <!-- card -->
+          <div id="cardDiv" class="grid grid-cols-3 gap-4 ">
+          </div>
+          <!-- Load More Button -->
+          <div id="btnMoreDiv" class="text-center mt-5 hidden  ">
+            <button id="btnMoreLoad" class="btn btn-wide rounded-none   text-[#D9D9D9] bg-[#0E1B34] ">Load
+              More</button>;
+          </div>
+          <!-- Loding button 2nd -->
+          <div id="loading2" class="text-center hidden mt-5">
+            <button class="btn loading text-center bg-[#0E1B34] text-[#D9D9D9] rounded-none">loading...</button>
+          </div>
         </div>
       </section>
+
     </main>
   </section>
 
